# good-times-with-wasm

./: .envrc  Cargo.toml  flake.nix  justfile  test.cwasm  thing.smol
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link  flake-profile-5-link  flake-profile-6-link  flake-profile-7-link  flake-profile-8-link
crates/compiler/: Cargo.toml
crates/compiler/src/: main.rs
crates/compiler/src/compile/: expr_to_fancy_wasm.rs  mod.rs  run_wasm.rs
crates/compiler/src/parser/: lexeme.rs  mod.rs  parse_expr.rs
crates/compiler/src/types/: expr.rs  ty.rs  typeerror.rs
crates/compiler/src/wasm_ast/: pretty.rs  types.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: main.rs
src/: compile.rs  main.rs
src/ast/: pretty.rs  types.rs
src/compile/: expr_to_wasm.rs  exprtowasm.rs  mod.rs  run_wasm.rs  runwasm.rs  to_wasm.rs
src/interpret/: interpreter.rs
src/parser/: parse_constructors.rs  parse_expr.rs
src/typecheck/: elaborate.rs
src/types/: expr.rs  mod.rs
src/wasm_ast/: pretty.rs
