[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smol-lsp"           # The name of the target.
path = "src/main.rs"    # The source file of the target.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros"] }
serde_json = "1.0.105"
